syntax = "proto3"; // 指定的当前proto语法的版本，有2和3
//option go_package = "path;name"; ath 表示生成的go文件的存放地址，会自动生成目录的
// name 表示生成的go文件所属的包名
option go_package = "../grpc/userservice";

package user; // 指定等会文件生成出来的package

message UserReq {
  string name = 1;
  int32 age = 2;
}

message UserResp {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  // 获取用户信息
  rpc GetUser (UserReq) returns (UserResp);
}

//message UserResp {
//  int32 code = 1;
//  string message = 2;
//}

//    protoc --go_out=plugins=grpc:./ .\product.proto